--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dydxprotocol/solomargin",
+  "name": "@dydxprotocol/solo",
   "version": "0.0.1",
   "description": "Ethereum Smart Contracts for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/index.js",
@@ -31,7 +31,7 @@
     "deploycosts": "truffle test util/DeployGasCosts.js",
     "node": "ganache-cli",
     "debug": "truffle debug",
-    "dydxlint": "python util/lintcontracts.py && python util/linttests.py",
+    "dydxlint": "python util/lintcontracts.py",
     "build:js": "./node_modules/.bin/babel src --out-dir dist --source-maps inline",
     "docker_node": "ganache-cli -i 1212 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "clean_contract_json": "babel-node ./scripts/clean-build.js",
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dydxprotocol/solomargin"
+    "url": "https://github.com/dydxprotocol/solo"
   },
   "keywords": [
     "dydx",
@@ -50,9 +50,9 @@
   "author": "dYdX Trading Inc.",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/dydxprotocol/solomargin/issues"
+    "url": "https://github.com/dydxprotocol/solo/issues"
   },
-  "homepage": "https://github.com/dydxprotocol/solomargin#readme",
+  "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bignumber.js": "^4.1.0",
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@digix/tempo": "^0.2.0",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
@@ -71,7 +71,11 @@
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "es6-promisify": "^5.0.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0",
     "ethereumjs-util": "^5.2.0",
     "ganache-cli": "^6.1.8",
     "mocha-junit-reporter": "^1.18.0",
@@ -80,7 +84,7 @@
     "solium": "1.1.8",
     "truffle": "5.0.0-beta.2",
     "truffle-contract": "^3.0.6",
-    "web3": "1.0.0-beta.35",
-    "websocket": "1.0.26"
+    "web3": "1.0.0-beta.36",
+    "websocket": "1.0.28"
   }
 }
