--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs:
       - run:
           name: Compile contracts
           command: npm run compile -- --all
+      - run:
+          name: Generate wrappers
+          command: npm run build:wrappers
       - save_cache:
           key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -45,7 +48,7 @@ jobs:
           key: cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Lint
-          command: npm run lint && npm run dydxlint && npm run solint && npm run tslint
+          command: npm run lint
   test:
     docker:
       - image: dydxprotocol/node:8.12-alpine-v1
