--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
   },
   "scripts": {
     "test": "NODE_ENV=test truffle test",
-    "build": "truffle compile && typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/contracts/*.json'",
+    "build": "npm run compile && npm run build:wrappers",
+    "compile": "truffle compile",
+    "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/contracts/*.json'",
     "migrate": "truffle migrate",
     "develop": "truffle develop",
     "console": "truffle console",
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
-    "tslint": "tslint --project . -t verbose 'src/**/*.ts'",
-    "solint": "solium -d contracts/",
+    "lint": "npm run lint:js && npm run lint:ts && npm run lint:sol && npm run lint:dydx",
+    "lint:js": "eslint --ext .js --ignore-path .gitignore .",
+    "lint:ts": "tslint --project . -t verbose 'src/**/*.ts'",
+    "lint:sol": "solium -d contracts/",
+    "lint:dydx": "python util/lintcontracts.py",
     "coverage": "./node_modules/.bin/solidity-coverage",
     "deploycosts": "truffle test util/DeployGasCosts.js",
     "node": "ganache-cli",
     "debug": "truffle debug",
-    "dydxlint": "python util/lintcontracts.py",
     "build:js": "rm -rf dist/ && tsc",
     "docker_node": "ganache-cli -i 1212 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "clean_contract_json": "babel-node ./scripts/clean-build.js",
