--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
   },
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
+    "@dydxprotocol/exchange-wrappers": "0.0.3",
     "@types/web3": "^1.0.12",
     "babel-runtime": "^6.26.0",
     "bignumber.js": "^4.1.0",
+    "bn.js": "4.11.8",
     "openzeppelin-solidity": "2.1.0-rc.2",
-    "web3": "^1.0.0-beta.36"
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "@digix/tempo": "^0.2.0",
@@ -72,7 +74,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "bn.js": "4.11.8",
     "canonical-weth": "^1.1.0",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
