--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.0.3",
-    "@types/web3": "^1.0.12",
+    "@types/web3": "^1.0.14",
     "babel-runtime": "^6.26.0",
     "bignumber.js": "^4.1.0",
     "bn.js": "4.11.8",
@@ -68,42 +68,40 @@
   },
   "devDependencies": {
     "@digix/tempo": "^0.2.0",
+    "@types/mocha": "^5.2.5",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "canonical-weth": "^1.1.0",
+    "canonical-weth": "^1.3.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
-    "es6-promisify": "^5.0.0",
-    "eslint": "^5.9.0",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0",
     "ethereumjs-util": "^5.2.0",
-    "ganache-cli": "^6.1.8",
+    "ganache-cli": "^6.2.5",
     "mocha-junit-reporter": "^1.18.0",
+    "mocha-tslint": "^0.3.0",
     "request-promise-native": "^1.0.5",
     "solidity-coverage": "0.5.01",
     "solium": "1.1.8",
-<<<<<<< HEAD
     "truffle": "5.0.0",
-=======
-    "truffle": "5.0.0-beta.2",
-<<<<<<< HEAD
->>>>>>> Implement typescript lib setup
     "truffle-contract": "4.0.0",
     "web3": "1.0.0-beta.36",
-=======
     "tslint": "^5.11.0",
+    "truffle": "5.0.0",
+    "truffle-typings": "1.0.5",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-no-focused-test": "^0.5.0",
     "typechain": "^0.3.9",
     "typescript": "^3.2.2",
->>>>>>> Implement typescript lib setup
     "websocket": "1.0.28"
   }
 }
