--- a/package.json
+++ b/package.json
@@ -27,21 +27,20 @@
     "migrate": "truffle migrate",
     "develop": "truffle develop",
     "console": "truffle console",
-    "lint": "npm run lint:js && npm run lint:ts && npm run lint:sol && npm run lint:dydx",
-    "lint:js": "eslint --ext .js --ignore-path .gitignore .",
+    "lint": "npm run lint:ts && npm run lint:sol && npm run lint:dydx",
     "lint:ts": "tslint --project . -t verbose 'src/**/*.ts'",
     "lint:sol": "solium -d contracts/",
     "lint:dydx": "python util/lintcontracts.py",
     "coverage": "./node_modules/.bin/solidity-coverage",
-    "deploycosts": "truffle test util/DeployGasCosts.js",
     "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && tsc",
     "docker_node": "ganache-cli -i 1212 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
-    "clean_contract_json": "babel-node ./scripts/clean-build.js",
+    "clean_contract_json": "ts-node ./scripts/clean-build.js",
     "deploy": "truffle migrate --network=$NETWORK --reset && babel-node ./scripts/save-deployed-addresses.js",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
-    "deploy_mainnet": "NETWORK=mainnet npm run deploy"
+    "deploy_mainnet": "NETWORK=mainnet npm run deploy",
+    "install_compiler": "docker pull ethereum/solc:0.5.2"
   },
   "repository": {
     "type": "git",
@@ -59,35 +58,18 @@
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.0.3",
-    "@types/web3": "^1.0.14",
-    "babel-runtime": "^6.26.0",
     "bignumber.js": "^4.1.0",
     "bn.js": "4.11.8",
     "openzeppelin-solidity": "2.1.0-rc.2",
     "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
-    "@digix/tempo": "^0.2.0",
     "@types/mocha": "^5.2.5",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "canonical-weth": "^1.3.1",
+    "@types/web3": "^1.0.14",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "ethereumjs-util": "^5.2.0",
     "ganache-cli": "^6.2.5",
     "mocha-junit-reporter": "^1.18.0",
-    "mocha-tslint": "^0.3.0",
-    "request-promise-native": "^1.0.5",
     "solidity-coverage": "0.5.11",
     "solium": "1.1.8",
     "tslint": "^5.12.0",
@@ -97,7 +79,6 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-no-focused-test": "^0.5.0",
     "typechain": "^0.3.9",
-    "typescript": "^3.2.2",
-    "websocket": "1.0.28"
+    "typescript": "^3.2.2"
   }
 }
