--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "build/",
     "contracts/",
     "src/",
-    "truffle.js",
     "LICENSE",
-    "README.md",
-    ".babelrc"
+    "README.md"
   ],
   "directories": {
     "contracts": "contracts",
@@ -64,18 +62,20 @@
     "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
+    "@types/es6-promisify": "^6.0.0",
     "@types/mocha": "^5.2.5",
     "@types/web3": "^1.0.14",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
+    "es6-promisify": "^6.0.1",
     "ganache-cli": "^6.2.5",
     "mocha-junit-reporter": "^1.18.0",
     "solidity-coverage": "0.5.11",
     "solium": "1.1.8",
-    "tslint": "^5.12.0",
     "truffle": "5.0.0",
     "truffle-typings": "1.0.5",
     "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-no-focused-test": "^0.5.0",
     "typechain": "^0.3.9",
