--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "build/",
     "contracts/",
     "src/",
-    "truffle.js",
     "LICENSE",
-    "README.md",
-    ".babelrc"
+    "README.md"
   ],
   "directories": {
     "contracts": "contracts",
@@ -21,23 +19,26 @@
   },
   "scripts": {
     "test": "NODE_ENV=test truffle test",
-    "compile": "truffle compile",
+    "build": "npm run compile && npm run build:wrappers",
+    "compile": "node_modules/.bin/truffle compile",
+    "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/contracts/*.json'",
     "migrate": "truffle migrate",
     "develop": "truffle develop",
     "console": "truffle console",
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
-    "solint": "solium -d contracts/",
+    "lint": "npm run lint:ts && npm run lint:sol && npm run lint:dydx",
+    "lint:ts": "tslint --project . -t verbose 'src/**/*.ts'",
+    "lint:sol": "solium -d contracts/",
+    "lint:dydx": "python util/lintcontracts.py",
     "coverage": "./node_modules/.bin/solidity-coverage",
-    "deploycosts": "truffle test util/DeployGasCosts.js",
     "node": "ganache-cli",
     "debug": "truffle debug",
-    "dydxlint": "python util/lintcontracts.py",
-    "build:js": "./node_modules/.bin/babel src --out-dir dist --source-maps inline",
+    "build:js": "rm -rf dist/ && tsc",
     "docker_node": "ganache-cli -i 1212 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
-    "clean_contract_json": "babel-node ./scripts/clean-build.js",
+    "clean_contract_json": "ts-node ./scripts/clean-build.js",
     "deploy": "truffle migrate --network=$NETWORK --reset && babel-node ./scripts/save-deployed-addresses.js",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
-    "deploy_mainnet": "NETWORK=mainnet npm run deploy"
+    "deploy_mainnet": "NETWORK=mainnet npm run deploy",
+    "install_compiler": "docker pull ethereum/solc:0.5.2"
   },
   "repository": {
     "type": "git",
@@ -54,37 +55,30 @@
   },
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "@dydxprotocol/exchange-wrappers": "0.0.3",
     "bignumber.js": "^4.1.0",
-    "openzeppelin-solidity": "2.1.0-rc.2"
+    "bn.js": "4.11.8",
+    "openzeppelin-solidity": "2.1.0-rc.2",
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
-    "@digix/tempo": "^0.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "bn.js": "4.11.8",
-    "canonical-weth": "^1.1.0",
+    "@types/es6-promisify": "^6.0.0",
+    "@types/mocha": "^5.2.5",
+    "@types/web3": "^1.0.14",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
-    "es6-promisify": "^5.0.0",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "ethereumjs-util": "^5.2.0",
-    "ganache-cli": "^6.1.8",
+    "es6-promisify": "^6.0.1",
+    "ganache-cli": "^6.2.5",
     "mocha-junit-reporter": "^1.18.0",
-    "request-promise-native": "^1.0.5",
-    "solidity-coverage": "0.5.01",
+    "solidity-coverage": "0.5.11",
     "solium": "1.1.8",
     "truffle": "5.0.0",
-    "truffle-contract": "4.0.0",
-    "web3": "1.0.0-beta.36",
-    "websocket": "1.0.28"
+    "truffle-typings": "1.0.5",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-no-focused-test": "^0.5.0",
+    "typechain": "^0.3.9",
+    "typescript": "^3.2.2"
   }
 }
