Update CI Build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           key: cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/build
-  build:
+  build_contracts:
     docker:
       - image: dydxprotocol/node:8.12-alpine-v1
     working_directory: ~/build
@@ -44,7 +44,7 @@ jobs:
           name: Generate wrappers
           command: npm run build:wrappers
       - save_cache:
-          key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/build
   lint:
@@ -53,7 +53,7 @@ jobs:
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Lint
           command: npm run lint
@@ -64,10 +64,10 @@ jobs:
     parallelism: 3
     steps:
       - restore_cache:
-          key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Test
-          command: TESTFILES=$(circleci tests glob "test/tests/**.js" | circleci tests split --split-by=filesize) && TRUFFLE_REPORTER=true npm test -- ${TESTFILES}
+          command: TESTFILES=$(circleci tests glob "test/**/*.ts" | circleci tests split --split-by=filesize) && TRUFFLE_REPORTER=true npm test -- ${TESTFILES}
           no_output_timeout: 20m
       - store_test_results:
           path: ~/build/junit
@@ -92,16 +92,27 @@ jobs:
           name: Coverage
           command: python util/hideasserts.py && npm run coverage && cat coverage/lcov.info | node_modules/.bin/coveralls
           no_output_timeout: 40m
+  build_js:
+    docker:
+      - image: dydxprotocol/node:8.12-alpine-v1
+    working_directory: ~/build
+    steps:
+      - restore_cache:
+          key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          name: Compile Typescript
+          command: npm run build:js
+      - save_cache:
+          key: cache-completed-build-js-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/build
   prod_build:
     docker:
       - image: dydxprotocol/node:8.12-alpine-v1
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Build Javascript
-          command: npm run build:js
+          key: cache-completed-build-js-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Production Build
           command: sh scripts/prod_build.sh
@@ -130,22 +141,29 @@ workflows:
   build_and_test:
     jobs:
       - checkout_and_install
-      - build:
+      - compile_contracts:
           requires:
             - checkout_and_install
       - lint:
           requires:
-            - build
+            - checkout_and_install
       - test:
           requires:
-            - build
+            - compile_contracts
       # TODO https://github.com/sc-forks/solidity-coverage/issues/258
       # - coverage:
       #     requires:
       #       - checkout_and_install
-      - prod_build:
+      - compile_js:
           requires:
-            - build
+            - compile_contracts
+      # TODO
+      # - prod_build:
+      #     requires:
+      #       - compile_js
+      #     filters:
+      #       branches:
+      #         only: master
       # - publish:
       #     requires:
       #       - prod_build
