--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "deploy_kovan": "NETWORK=kovan npm run deploy",
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
     "deploy_test": "npm run migrate -- --network test --reset",
-    "test_only": "NODE_ENV=test jest --runInBand",
+    "deploy_test_ci": "npm run migrate -- --network test_ci --reset",
+    "test_only": "NODE_ENV=test jest --runInBand --setupFiles dotenv/config",
+    "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --runInBand --setupFiles dotenv/config",
     "install_compiler": "docker pull ethereum/solc:0.5.2"
   },
   "repository": {
@@ -69,6 +71,7 @@
     "@types/web3": "^1.0.14",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
+    "dotenv": "^6.2.0",
     "es6-promisify": "^6.0.1",
     "ethlint": "1.2.1",
     "ganache-cli": "^6.2.5",
