--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
     "deploy_test": "npm run migrate -- --network test --reset",
     "deploy_test_ci": "npm run migrate -- --network test_ci --reset",
-    "test_only": "NODE_ENV=test jest --runInBand --setupFiles dotenv/config",
+    "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
     "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --runInBand --setupFiles dotenv/config",
     "install_compiler": "docker pull ethereum/solc:0.5.2"
   },
