--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "deploy_test": "npm run migrate -- --network test --reset",
     "deploy_test_ci": "npm run migrate -- --network test_ci --reset",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
-    "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --runInBand --setupFiles dotenv/config",
+    "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "install_compiler": "docker pull ethereum/solc:0.5.2"
   },
   "repository": {
