--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "deploy_test_ci": "npm run migrate -- --network test_ci --reset && npm run snapshot_test_evm",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
     "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
-    "reset_test_evm": "node __tests__/scripts/reset-test-evm.js",
-    "snapshot_test_evm": "node __tests__/scripts/snapshot-test-evm.js",
+    "reset_test_evm": "node scripts/reset-test-evm.js",
+    "snapshot_test_evm": "node scripts/snapshot-test-evm.js",
     "install_compiler": "docker pull ethereum/solc:0.5.2"
   },
   "repository": {
