--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "deploy_kovan": "NETWORK=kovan npm run deploy",
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
     "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm",
-    "deploy_test_ci": "npm run migrate -- --network test_ci --reset && npm run snapshot_test_evm",
+    "deploy_test_ci": "npm run reset_test_evm && npm run migrate -- --network test_ci --reset && npm run snapshot_test_evm",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
     "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
