--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,14 +165,14 @@ workflows:
       - prod_build:
           requires:
             - build_js
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              only: master
       - publish:
           requires:
             - prod_build
             - test
             - lint
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              only: master
