--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,8 @@ jobs:
           name: Compile contracts
           command: npm run compile -- --all
       - run:
-          name: Generate wrappers
-          command: npm run build:externalwrappers
+          name: Compile contracts
+          command: npm run copy_tew
       - run:
           name: Generate wrappers
           command: npm run build:wrappers
